--- a/ML_portfolio.ipynb
+++ b/ML_portfolio.ipynb
@@ -272,51 +272,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 176/176 [00:08<00:00, 20.79it/s]\n",
-      "  9%|▊         | 15/176 [00:00<00:01, 147.09it/s]"
+      "100%|██████████| 176/176 [00:08<00:00, 20.35it/s]\n",
+      " 11%|█         | 19/176 [00:00<00:00, 180.23it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HRP time: 0:00:08.472899\n"
+      "HRP time: 0:00:08.657135\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 176/176 [00:00<00:00, 177.54it/s]\n",
-      " 30%|██▉       | 52/176 [00:00<00:00, 515.00it/s]"
+      "100%|██████████| 176/176 [00:00<00:00, 176.68it/s]\n",
+      " 31%|███       | 54/176 [00:00<00:00, 538.68it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CLA time: 0:00:00.995456\n"
+      "CLA time: 0:00:01.000266\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 176/176 [00:00<00:00, 512.25it/s]"
+      "100%|██████████| 176/176 [00:00<00:00, 541.53it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IVP time: 0:00:00.347924\n"
+      "IVP time: 0:00:00.328877\n"
      ]
     },
     {
@@ -338,10 +338,10 @@
     "        date = bwdRet.index[i]   # today\n",
     "        cov = np.array(bwdRet.iloc[i-60:i].cov())\n",
     "        corr = np.array(bwdRet.iloc[i-60:i].corr())\n",
-    "        mean = \n",
+    "        mean = np.array(bwdRet.iloc[i-60:i].mean())\n",
     "        \n",
     "        # use fancy methods\n",
-    "        weight.loc[date] = np.array(func(cov = cov, corr = corr, mean = mea)) # new weight as of yesterday's close\n",
+    "        weight.loc[date] = np.array(func(cov = cov, corr = corr, mean = mean)) # new weight as of yesterday's close\n",
     "          \n",
     "    return weight\n",
     "\n",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
